# web3-playground

./: .gitignore  README.md
amsterdam-dao/: .gitignore  README.md
amsterdam-dao/scripts/: 1-initialize-sdk.js  10-create-vote-proposals.js  11-revoke-roles.js  2-deploy-drop.js  3-config-nft.js  4-set-claim-condition.js  5-deploy-token.js  6-print-money.js  7-airdrop-token.js  8-deploy-vote.js  9-setup-vote.js
amsterdam-dao/src/: App.jsx  index.css
epic-nfts/: README.md  hardhat.config.js  package-lock.json  package.json
epic-nfts/contracts/: MyEpicNFT.sol
epic-nfts/scripts/: deploy.js  run.js
inbox/: compile.js  deploy.js  package-lock.json  package.json
inbox/test/: inbox.test.js
kickstart/: .gitignore  README.md  next.config.js  package-lock.json  package.json  routes.js  server.js
kickstart/components/: ContributeForm.js  Header.js  Layout.js  RequestRow.js
kickstart/ethereum/: compile.js  deploy.js  factory.js  web3.js
kickstart/pages/: index.js
kickstart/test/: Campaign.test.js
lottery/: compile.js  deploy.js  package.json
lottery-react/: package-lock.json  package.json
lottery-react/src/: App.js  lottery.js  web3.js
lottery/contracts/: Lottery.sol
lottery/test/: Lottery.test.js
my-wave-portal/: .gitignore  README.md  hardhat.config.js  package.json
my-wave-portal/contracts/: WavePortal.sol
nft-game/: README.md  hardhat.config.js  package-lock.json  package.json
solana-gifs-portal/: Anchor.toml  README.md
solana-gifs-portal/programs/solana-gifs-portal/: Cargo.toml
solana-gifs-portal/programs/solana-gifs-portal/src/: lib.rs
(+28 files in other folders)
